[package]
name = "svc-nats-client"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/foxford/svc-nats-client"
description = "Async nats client"

[dependencies]
anyhow = "1.0"
# todo: wait for the next release
# PR: https://github.com/nats-io/nats.rs/pull/975 (need for Presence)
async-nats = { version = "0.29", git = "https://github.com/foxford/nats.rs", branch = "main" }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3.28"
humantime-serde = "1"
nuid = "0.4.1"
reqwest = "0.11"
serde = "1.0"
svc-agent = "0.20"
svc-error = { version = "0.5", features = ["sentry-extension"] }
svc-events = "0.9"
thiserror = "1.0"
tokio = "1.28.1"
tracing = "0.1"
uuid = { version = "1.3", features = ["serde"] }
