[package]
name = "svc-nats-client"
version = "0.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/foxford/svc-nats-client"
description = "Async nats client"

[dependencies]
anyhow = "1.0"
async-nats = { version = "0.30" }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3.28"
humantime-serde = "1"
nuid = "0.5.0"
reqwest = "0.11"
serde = "1.0"
svc-agent = "0.21"
svc-error = { version = "0.6", features = ["sentry-extension"] }
svc-events = "0.11"
thiserror = "1.0"
tokio = "1.28.1"
tracing = "0.1"
uuid = { version = "1.3", features = ["serde"] }
